<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DD3F3F"
        android:padding="16dp">

        <TextView
            android:id="@+id/lHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/height"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tinggi_pokemon"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/lHeight"
            app:layout_constraintTop_toBottomOf="@+id/lHeight" />

        <TextView
            android:id="@+id/lWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:text="@string/weight"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/cHeight"
            app:layout_constraintTop_toBottomOf="@+id/cHeight" />


        <TextView
            android:id="@+id/cWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/berat_pokemon"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/lWeight"
            app:layout_constraintTop_toBottomOf="@+id/lWeight" />

        <TextView
            android:id="@+id/lCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/category"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_pokemon"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/lCategory" />

        <TextView
            android:id="@+id/lAbility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:text="@string/ability"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/cCategory" />

        <TextView
            android:id="@+id/cAbility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ability_pokemon"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/lAbility" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="189dp" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>